# electrumsv-secp256k1

./: .flake8  .gitignore  HISTORY.rst  README.md  README.rst  pyproject.toml  setup.py  setup_support.py  tox.ini
.azure-pipelines/: build-linux-wheels.sh  build.sh  build.yml  build_windows_wheels.sh  ci.yml  deploy.sh  install-python.yml  install.sh  prepare-general-environment.yml  prepare-macos-environment.yml  prepare-windows-environment.yml  prepare_windows_build.sh
.github/scripts/: build-windows-wheels.sh
.github/workflows/: build.yml
electrumsv_secp256k1/: __init__.py  context.py  ecdsa.py  keys.py  utils.py
tests/: test_flags.py
