[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electrumsv-secp256k1"  # as it would appear on PyPI
version = "0.9.5"
requires-python = ">=3.8"
description = "Cross-platform Python libsecp256k1 for ElectrumSV"
readme = "README.rst"
authors = [
    { name = "Roger Taylor", email = "roger.taylor.email@gmail.com" }
]
maintainers = [
    { name = "Roger Taylor", email = "roger.taylor.email@gmail.com" }
]
license = { text = "MIT/Apache-2.0" }
keywords = [ "secp256k1", "crypto", "elliptic curves", "bitcoin", "bitcoin-sv", "bitcoin sv" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography"
]
dependencies=[
    'cffi>=1.3.0'
]

[project.urls]
"Homepage" = "https://github.com/electrumsv/electrumsv-secp256k1"

[tool.distutils.bdist_wheel]
universal = false
